# FECC4e

./: .firebaserc  .gitignore  .typos.toml  404-script.js  404-style.css  404.html  Cargo.toml  Makefile.toml  README.md  firebase.json
.github/workflows/: ci.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  native.yml
art/: ART.md  manifest.json
assets/: asset_manifest.json  manifest.json
assets/csv/: Metal_colour_palette.csv  Skin_colour_palette.csv
fecc_cli/: Cargo.toml
fecc_cli/src/: main.rs
fecc_core/: Cargo.toml
fecc_core/src/: asset.rs  character.rs  export.rs  extensions.rs  file_io.js  file_io.rs  lib.rs  random.rs  recolour.rs  types.rs
fecc_core/src/extensions/: rgba.rs
fecc_gui/: Cargo.toml  Trunk.toml  build.rs  index.html  style.css
fecc_gui/src/: app.rs  extensions.rs  main.rs
fecc_gui/src/app/: canvas_interaction.rs  eframe_ui.rs
fecc_gui/src/extensions/: color32.rs  toggle_switch.rs
