[package]
name = "fecc_core"
version = "0.1.0-alpha8"
edition = "2024"

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
csv = "1.4.0"
log = "0.4.28"
strum = "0.27.2"
strum_macros = "0.27.2"
indexmap = { version = "2.12.1", features = ["serde"] }
imageproc = { version = "0.25.0", default-features = false }
glob = "0.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.105"
web-sys = "0.3.82"
js-sys = "0.3.82"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.55"