[package]
name = "fe_character_creator"
version = "0.1.0"
authors = ["aidan-es"]
edition = "2024"

[[bin]]
name = "fe_character_creator"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[dependencies]
egui = "0.33.2"
fecc_core = { path = "../fecc_core" }
eframe = { version = "0.33.2", features = [
    "persistence",
] }
log = "0.4.29"
egui_extras = { version = "0.33.2", features = ["svg"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
strum_macros = "0.27.2"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
futures-channel = "0.3.31"
wasm-bindgen-futures = "0.4.56"
futures-util = "0.3.31"
strum = "0.27.2"
indexmap = { version = "2.12.1", features = ["serde"] }
serde_json = "1.0.145"
egui-notify = "0.21.0"
pulldown-cmark = "0.13.0" # For building HTML pages


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4.42"
fern = "0.7.1"
dirs-next = "2.0"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.106"
web-sys = "0.3.82"
js-sys = "0.3.82"
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.3.4", features = ["wasm_js"] }


[build-dependencies]
serde_json = "1.0.145"

[lints]
workspace = true
